# router/user.js
@@ -2,12 +2,13 @@ const express = require("express");
 const {
   login,
   addEmployee,
-  editPassword
+  editPassword,
   getAll,
   getUserbyId,
   getUserbyIdParams,
   editRole,
   changeUserDevisi,
+  uploudPersDocs,
 } = require("../controller/user");
 const {
   verifyToken,
@@ -19,9 +20,11 @@ const {
   addEmployeeValidation,
   editRoleValidation,
   editPasswordValidation,
-  validateDevisiChange
+  validateDevisiChange,
+  editPersDocsValidation,
 } = require("../middleware/user");
 const db = require("../models");
+const uploud = require("../middleware/multer");
 const router = express.Router();
 
 router.post(`/user`, verifyTokenAdmin, addEmployeeValidation, addEmployee);
@@ -32,5 +35,16 @@ router.get("/profile", verifyToken, getUserbyId);
 router.put("/user/role", verifyTokenSuperAdmin, editRoleValidation, editRole);
 router.get("/user/:id", getUserbyIdParams);
 router.put("/user/devisi", changeUserDevisi, validateDevisiChange);
+router.put(
+  "/persdocs/:id",
+  verifyTokenAdmin,
+  uploud.fields([
+    { name: "url_kk", maxCount: 1 },
+    { name: "url_bpjs", maxCount: 1 },
+    { name: "url_npwp", maxCount: 1 },
+  ]),
+  editPersDocsValidation,
+  uploudPersDocs
+);
 
 module.exports = router;
